# Federated-Learning

./: .gitignore  README.md  hars_columns.txt  pyproject.toml  requirements.txt  setup.py
data/: dataset_1.csv  dataset_10.csv  dataset_2.csv  dataset_3.csv  dataset_4.csv  dataset_5.csv  dataset_6.csv  dataset_7.csv  dataset_8.csv  dataset_9.csv  test_split.py
fl_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/HARSModel151517112024/: config.json  loss_results.csv
src/: data_exploration.ipynb  federated_learning.py  local_coordination_startup_test.py  test.py  train.py
src/client/: client.py  client_setup_test.py  config.py  key_generation.py  key_generation_test.py  state_logic.py  tests.py
src/client/server/: __init__.py  client.py  config.py  key_generation.py  scheduling_logic.py  server.py
src/client_server/: client.py
src/coordination/: temp3  test.py
src/coordination/server/: __init__.py  aggregation.py  check_database.py  client_status_test.py  data_classes.py  database_orm.py  export_validation.py  old_serv.py  server.py  utility.py  views.py  (+1 more)
src/coordination_server/: __init__.py  connected.py
src/core_model/: federated_learning.py  pyproject.toml  setup.py
src/core_model/flcore/: logger.py  test.py  train.py
src/core_model/flcore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/core_model/flcore/data_handling/: datasets.py  loader_files.py
src/core_model/flcore/models/: basic.py
src/core_model/tests/: test_hars.py
src/data_handling/: dataloaders.py  datasets.py  loader_files.py
src/models/: basic.py
(+3 files in other folders)
