[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flcore"  # Make this match the setup.py name
version = "0.0.2"
authors = [
    {name = "Marcus Warren", email = "marcuswrrn@gmail.com"}
]
description = "Core functionality for a federated learning system developed for our final year Capstone Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "matplotlib>=3.9",
    "pandas"
]
